mychart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
  labels:
    app: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: talshaham/app-weather:90
---

apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: weather-app
  ports:
    - port: 80
      name: http
      targetPort: 5000
