mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'ingress-app123'
spec:
  ingressClassName: nginx
  rules:
  - host: a84c27ca351b8492580156ed4f556f6a-136446883.eu-north-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: 'weather-app-mychart-service-app'
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: 'weather-app-mychart-service-app'
            port:
              number: 80
        path: /static/* #for all the static files (css/images)
        pathType: Prefix
